GV:OnLoadRequest with empty uri when pressing the paypal button
Categories
(GeckoView :: General, defect, P1)
Tracking
(firefox80 fixed)
| Tracking | Status | |
|---|---|---|
| firefox80 | --- | fixed |
People
(Reporter: petru, Assigned: snorp)
Details
(Whiteboard: [geckoview:m79][geckoview:m80][fenix:p1])
Attachments
(1 file)
First reported on Fenix a few months ago in https://github.com/mozilla-mobile/fenix/issues/4918 but also reproducible in geckoview-example for which I'll post some logs.
The issue seems to relate to newly opened pages which would ask users to login.
Seems to be a relatively recent regression resulting in some kind of a race since me and others have got to the expected result when debugging with breakpoints.
ESR geckoview_example working:
- video - https://drive.google.com/file/d/1fYFSthrDHTg0Idsnk4mJiCn1eeN3SQkg/view?usp=sharing
- logs - https://pastebin.com/Q705JG8z
Latest geckoview_example not working:
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Comment 1•6 years ago
|
||
Possibly related to bug 1644596
Comment 2•6 years ago
|
||
This looks like it has been broken for a long time, can't make it work on 75 onward. On 72 it breaks in a different way.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 3•6 years ago
|
||
It appears that this is caused by us calling suspendTimeouts()[1] on the original page when it is backgrounded. Presumably the paypal page has to communicate with the original page via window.opener, and that's unable to occur if we suspend it. Maybe we could avoid suspending if we know it is used as window.opener elsewhere?
| Assignee | ||
Comment 4•6 years ago
|
||
This avoids problems where a foreground tab tries to communicate with a background
tab via window.opener, but is unable to because the background tab
is suspended.
Comment 6•6 years ago
|
||
| bugherder | ||
Description
•